syntax = "proto3";

package email;

service EmailService {
  rpc SendPaymentConfirmation (EmailRequest) returns (EmailResponse) {}
}

message EmailRequest {
  string recipient = 1;
  string subject = 2;
  string template = 3;
  EmailData data = 4;
}

message EmailData {
  string invoiceId = 1;
  double amount = 2;
  string transactionId = 3;
  string date = 4;
}

message EmailResponse {
  bool success = 1;
  string message = 2;
}